# team-reference-testing-public

./: README.md
.github/workflows/: Burrows-Wheeler Gtest.yml  Burrows-Wheeler Timus.1322.yml  Dinic CF Marbles.yml  FFT Benchmark.yml  FFT Gtest.yml  FFT Timus.1996 CI.yml  FFT Timus.1996.yml  FFT.yml  Gauss Timus.1041.yml  Manacher Timus.1297.yml  NT Gtest.yml  NT.yml  Simplex ASC.13.C.yml  Simplex Codeforces.104506.yml  Simplex Gtest.yml  Simplex NERC.2020.Online.O.yml inactive  Simplex Timus.1417.yml  SufAuto Timus.1423.yml  SufAuto Timus.1590.yml  Sufarr Timus.1423.yml  Sufarr Timus.1590.yml  Z_function Timus.1423.yml  dinic.yml  dinic.yml disabled  manacher.yml  sufarr cucle shift.yml  sufarr cycle shift.yml  sufarr.1590.yml  (+1 more)
Convolution/: convolution.cpp
DominatorsTree/: dominators_tree.cpp
FFT/: FFT.hpp  NTT.hpp
GeneralMatching/: general_matching.cpp
Halfplane/: halfplane.cpp
SuffixAutomaton/: suffix_automaton.cpp  suffix_automaton.hpp  suffix_automaton_template.hpp
SuffixTree/: suffix_tree.cpp
TeamBook/: hexagon.0.eps  ref-utf8.tex  triangle.0.eps
TwoChinese/: two_chinese.cpp
basic_strings/: z_function.hpp
burrows_wheeler/: burrows_wheeler.hpp
dinic/: README.md  dinic.cpp  edmonds-karp.cpp  hlpp.cpp
gauss/: gauss.hpp
number_theory/: NT.hpp  modulo.hpp
number_theory/testing/test/: CMakeLists.txt  main.cpp  naiveNT.hpp
palindromes/: manacher.cpp
simplex/: simplex.hpp
suffix_array/: suffix_array.cpp  suffix_array.hpp
utils/: README.MD  online_judges_benchmark.py  prepare-firefox.sh  testing.hpp  typedefs.hpp
(+61 files in other folders)
